--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "js-pinning-service-http-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "openapi/dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm --prefix openapi run build",
+    "test": "npm --prefix openapi test"
   },
   "author": "Cody Hatfield (@codynhat)",
   "license": "MIT",
