--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js-pinning-service-http-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "openapi/dist/index.js",
+  "main": "./openapi/dist/index.js",
   "scripts": {
     "build": "npm --prefix openapi run build",
     "test": "npm --prefix openapi test"
